Test fabric-models-v0